--- a/styles.css
+++ b/styles.css
@@ -36,8 +36,12 @@ body {
     background-color: #ddd;
     cursor: pointer;
     border-radius: 5px; /* Adjust the value for more or less rounding */
+    margin-bottom: 20px;
+    margin-top: 20px;
+
 
   }
+
   
   .tab-button.active {
     background-color: #333;
@@ -90,7 +94,10 @@ body {
   label {
     display: block;
     margin-bottom: 5px;
+    font-size: 14px;
+
   }
+ 
   
   textarea {
     width: 100%;
@@ -162,14 +169,15 @@ body {
 .key-tabs {
     display: flex;
     flex-wrap: wrap;
-    gap: 5px;
+    gap: 3px; /* Reduce spacing between tabs */
 }
 
 .key-tab {
     background: #eeeeee;
     color: black;
     border: none;
-    padding: 8px 12px;
+    padding: 6px 9.5px; /* Reduce padding */
+    font-size: 12px; /* Decrease font size */
     cursor: pointer;
     border-radius: 1px;
     transition: 0.3s;
@@ -177,5 +185,80 @@ body {
 
 .key-tab.active {
     background: #2259d7;
-    color: rgb(255, 255, 255);
+    color: white;
+}
+
+#n2c-status {
+    font-size: 12px;
+    color: grey;
+    text-shadow: 0 0 8px rgba(255, 255, 255, 0.8);
+    position: relative;
+    animation: float 3s ease-in-out infinite, typing 3s steps(40) forwards 3s, blink-cursor 1s infinite 3s;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 2px solid grey;
+    width: 0;
+}
+
+/* Typing effect */
+@keyframes typing {
+    from { width: 0; }
+    to { width: 245px; } /* Adjust width based on text length */
+}
+
+/* Blinking cursor effect */
+@keyframes blink-cursor {
+    50% { border-color: transparent; }
+}
+
+
+/* Loading screen */
+#loading-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
+/* Loading GIF */
+.loading-logo {
+    width: 150px; /* Adjust size as needed */
+    height: auto;
+    border-radius: 50px; /* Smooth edges */
+    object-fit: contain;
+}
+
+/* Loading bar */
+.loading-bar {
+    width: 100px;
+    height: 5px;
+    background: rgba(255, 255, 255, 0.3);
+    margin-top: 10px;
+    position: relative;
+    overflow: hidden;
+}
+
+.loading-bar::after {
+    content: "";
+    position: absolute;
+    width: 0%;
+    height: 100%;
+    background: rgb(0, 0, 0);
+    animation: loading 3s linear forwards;
+}
+
+@keyframes loading {
+    from {
+        width: 0%;
+    }
+    to {
+        width: 100%;
+    }
 }
